ecmascript/parser/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts.stderr
error[1187]: A parameter property may not be declared using a binding pattern.
 --> $DIR/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts:2:24
  |
2 |     constructor(public []) {}
  |                        ^^

